--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,11 @@ a:hover, a:visited {
   min-height: 100vh;
 }
 
+/* Utilities */
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+
 /* Buttons */
 .button {
   padding: 6px 24px;
@@ -509,14 +514,12 @@ li.nav-item-brand {
   font-size: 1.15rem;
   border-radius: 4px;
   border: 1px solid var(--accent-light);
+  overflow: hidden;
 }
 
 .picture-info-card-image {
   width: 100%;
   flex: 1 1 0;
-}
-.picture-info-card-image > img {
-  border-radius: 4px 0 0 4px;  
 }
 
 .picture-info-card-info {
@@ -538,11 +541,10 @@ li.nav-item-brand {
     display: flex;
     width: 60%;
     margin: 8px auto;
-    border: 2px solid violet;
-    border-radius: 50%;
   }
-
+  
   .picture-info-card-image > img {
+    border: 2px solid violet;
     border-radius: 50%;
   }
 }
