--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,8 @@
   --accent-light-active: #80726c;
   --accent-light-after: #837771;
   --accent-light-faded: #bd9479b3;
+  --accent-light-shadow1: #90817a29;
+  --accent-light-shadow2: #90817a3b;
   
   --white: #ffffff;
   --light-brown: #c5b8ab;
@@ -515,6 +517,7 @@ li.nav-item-brand {
   border-radius: 4px;
   border: 1px solid var(--accent-light);
   overflow: hidden;
+  box-shadow: 0 3px 6px var(--accent-light-shadow1), 0 3px 6px var(--accent-light-shadow2);
 }
 
 .picture-info-card-image {
@@ -525,6 +528,11 @@ li.nav-item-brand {
 .picture-info-card-info {
   padding: 10px;
   flex: 3 1 0;
+}
+
+.picture-info-card-info .title {
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .picture-info-card img {
